--- a/main/style.css
+++ b/main/style.css
@@ -1,82 +1,43 @@
 body {
-    background-image: url('/img/fon.jpg');
+    background-color:black;
     color: #7709a3;
+    font-family: "Miriam Libre", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+.container-fluid{
+    width: 100%;
+    padding: 0px;
 }
 
-
-
-
 .nav-link {
-    color: #ffffff !important;
+    color: #ffffff;
     margin-right: 20px;
 }
 
 .nav-link:hover, .nav-link.active {
     color: #fff ;
 }
-
-.crypto-card {
-    background-color: #000000; 
-    border-radius: 15px; 
-    box-shadow: 0 4px 8px rgb(0, 0, 0); 
-    transition: transform 0.3s ease; 
-    margin-bottom: 20px; 
-}
-
-.crypto-card:hover {
-    transform: translateY(-5px); 
-}
-
-
-.crypto-card p {
-    color: #e6e6e6; 
-    font-size: 0.9rem;
-    line-height: 1.5;
-}
-
-
-.crypto-card img {
-    width: 100%; 
-    height: auto; 
-    border-radius: 15px 15px 0 0; 
-    margin-bottom: 15px; 
-    
-}
-
-.crypto-card .img-fluid {
-    max-width: 50%; 
-    height: auto; 
-    display: block; 
-    margin: 0 auto 15px; 
-}
-
-
-
 header {
-    background-color: #000000; 
-    color: #8605ff;
-    padding: 20px 0; 
+    background-color: #000000;
+    padding: 20px;
     font-size: 0.9rem;
-    border-bottom: 5px solid #7709a3; 
-}
-
-header h2 {
-    color: #ffffff;
-    margin-left: 20px; 
+    border-bottom: 5px solid #7709a3;
+    width: 100%;
 }
 
 .nav {
-    padding-right: 20px; 
+    padding-right: 20px;
 }
 
 .nav-link {
-    color: rgba(255, 255, 255, 0.7); 
-    transition: color 0.3s ease; 
+    color: rgba(255, 255, 255, 0.7);
+    transition: color 0.3s ease;
 }
 
-.nav-link:hover, .nav-link.active {
-    color: #2c0141; 
-    text-decoration: none; 
+.nav-link:hover{
+    color: #4d1161;
+    text-decoration: none;
 }
 
 @media (max-width: 768px) {
@@ -85,25 +46,78 @@ header h2 {
     }
 
     header h2 {
-        margin-left: 0; 
+        margin-left: 0;
     }
 }
-
-#cryptoInfo {
-    border-bottom: 5px solid #7709a3;
+.price{
+    background: radial-gradient(circle, rgb(255, 255, 255), rgba(26, 26, 26, 0.566));
+    background-attachment: fixed;
+    padding: 10px 3% 3% 3%;
+    border-bottom: 4px solid #7709a3; 
+    border-top: 4px solid #7709a3;
+}
+.price p:first-child{
+     font-size: 50px;
+    text-align: center;
+    margin: 20px;
 }
 
-.container-fluid.mt-4 {
-  margin-top: 40px; 
-  width: 77%; 
-  min-width: 400px;
-  
+.welcome{
+    width: 70%;
+    margin: 0px 15%;
 }
 
+.crypto-card {
+    background-color: #000000; 
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.632) 10%, rgb(0, 0, 0) 50%, rgba(0, 0, 0, 0.632) 90%);
+    border-radius: 15px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgb(0, 0, 0);
+    transition: transform 0.3s ease;
+    margin-bottom: 20px;
+}
 
+.crypto-card:hover {
+    transform: translateY(-5px); 
+}
+
+.crypto-card p {
+    color: #e6e6e6;
+    font-size: 0.9rem; 
+    line-height: 1.5;
+}
+
+.crypto-card img {
+    width: 100%; 
+    height: auto;
+    border-radius: 15px 15px 0 0;
+    margin-bottom: 15px; 
+    
+}
+
+.crypto-card .img-fluid {
+    max-width: 50%;
+    height: auto; 
+    display: block; 
+    margin: 0 auto 15px;
+}
+
+.about{
+    padding: 3% 15%;
+    font-size: 18px;
+    line-height: 30px;
+    text-align: center;
+}
+
+.about p:first-child{
+    font-size: 50px;
+    text-align: center;
+    color:#e6e6e6;
+    margin-bottom: 50px;
+}
 
 .carousel-caption {
-    background-color: rgba(118, 9, 163, 0.75); 
+    background-color: rgba(118, 9, 163, 0.75);
     border-radius: 10px;
     padding: 20px;
     
@@ -116,12 +130,11 @@ header h2 {
 .carousel {
     border-radius: 15px; 
     overflow: hidden; 
-    width: 66%; 
     margin: auto; 
 }
 
 .carousel-inner {
-    border-radius: 15px; 
+    border-radius: 15px;
 }
 
 .carousel-item img {
@@ -136,17 +149,6 @@ header h2 {
 }
 
 
-.btn-group {
-    display: flex;
-    display: block;
-    justify-content: center;
-    flex-direction: row;
-    padding: 10px;
-    margin: 15px;
-    
-
-}
-
 .btn-primary {
     background-color: #7709a3; 
     border: none;
@@ -159,17 +161,17 @@ header h2 {
 .btn-light {
     background-color: #fff; 
     color: #7709a3; 
-    border: 1px solid #7709a3;
+    border: 1px solid #7709a3; 
 }
 
 .btn-light:hover {
     background-color: #f2f2f2; 
-    color: #5e087d;
+    color: #5e087d; 
 }
 
-
-
-
+.mt-4{
+   padding: 0px 10%;
+}
 
 .site-footer {
     color: #ffffff;
@@ -186,7 +188,7 @@ header h2 {
     left: 0;
     height: 5px; 
     width: 100%; 
-    background-color: #7709a3; 
+    background-color: #7709a3;
 }
 
 .site-footer h3 {
@@ -205,7 +207,7 @@ header h2 {
     margin: 0;
 }
 
-.site-footer ul li a:hover {
+.site-footera:hover {
     color: #ffffff;
     text-decoration: underline;
 }
@@ -224,66 +226,58 @@ header h2 {
     }
 }
 
-
-
   
 .animated-image {
     transition: transform 0.5s ease; 
-    display: block; 
-    margin: 20px auto; 
+    display: block;
+    margin: 20px auto;
     transform: scale(1.0);
 }
 
 .animated-image:hover {
-    transform: scale(1.0) skewY(-5deg); 
+    transform: scale(1.0) skewY(-5deg);
 }
-
-
-
 
 .top-bar {
     height: 50px; 
-    background-color: #000; 
-    color: #fff; 
-    
+    background-color: #000;
+    color: #fff;
 }
 
 .bottom-bar {
     position: fixed; 
-    bottom: 0; 
+    bottom: 0;
     left: 0; 
-    width: 100%; 
-    height: 50px; 
-    background-color: #000; 
-    color: #fff; 
-    z-index: 10; 
-    
+    width: 100%;
+    height: 50px;
+    background-color: #000;
+    color: #fff;
+    z-index: 10;
 }
 
 
 .poloska {
-    padding: 20px 0; 
+    padding: 20px 0;
     font-size: 0.9rem;
-    border-bottom: 5px solid #7709a3; 
+    border-bottom: 5px solid #7709a3;
 }
 
 
 
 .store-links {
-    text-align: center; 
+    text-align: center;
 }
 
 .store-links img {
-    margin: 5px; 
+    margin: 5px;
     width: 75px; 
     transition: transform 0.3s ease;
-    display: inline-block; 
+    display: inline-block;
 }
 
 .store-links img:hover {
     transform: scale(1.05); 
 }
-
 
 
 
