--- a/main/style.css
+++ b/main/style.css
@@ -279,6 +279,126 @@ header {
     transform: scale(1.05); 
 }
 
+.modal-register, .modal-login {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-register-content, .modal-login-content {
+    background-image: url('/img/fon.jpg');
+    background-size: cover;
+    background-position: center;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 60%;
+    max-width: 400px; 
+    height: 400px;
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    border-radius: 10px; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+}
+
+.close-register, .close-login {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close-register:hover, .close-login:hover, .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-register-content > h2, .modal-login-content > h2 {
+    color: black;
+    padding: 10px 0;
+}
+
+.fields {
+    display: flex;
+    flex-direction: column;
+}
+
+.name-fields {
+    display: flex;
+    justify-content: space-between;
+    margin: 1%;
+    margin-bottom: 10px;
+    gap: 10px;
+    
+}
+
+.email-password {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-top: 10px;
+
+}
+
+.email-password input:nth-child(1), .email-password input:nth-child(2) {
+    margin-top: 10px; 
+    width: 94%;
+}
+
+input {
+    width: calc(50% - 5px); 
+    padding: 10px;
+    border: 1px solid #ccc; 
+    border-radius: 5px; 
+    font-size: 16px;
+    transition: border-color 0.3s; 
+}
+
+input:focus {
+    border-color: #aaa; 
+    outline: none; 
+}
+
+button[type="submit"] {
+    background-color: darkmagenta; 
+    color: white; 
+    padding: 10px 20px; 
+    border: none; 
+    border-radius: 5px; 
+    cursor: pointer; 
+    font-size: 16px;
+    transition: background-color 0.3s; 
+    justify-content: center;
+    margin-top: 30px;
+    width: 250px;
+
+}
+
+button[type="submit"]:hover {
+   background-color: #4f2455;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
